# connectedhomeip

./: ____init_____8py.html  _adapter_iterator_8cpp.html  _adapter_iterator_8h.html  _adapter_iterator_8h_source.html  _adapter_listing_8mm.html  _additional_data_payload_8h.html  _additional_data_payload_8h_source.html  _additional_data_payload_generator_8cpp.html  _additional_data_payload_generator_8h.html  _additional_data_payload_generator_8h_source.html  _additional_data_payload_parser_8cpp.html  _additional_data_payload_parser_8h.html  _additional_data_payload_parser_8h_source.html  _admin_pairing_table_8cpp.html  _admin_pairing_table_8h.html  _admin_pairing_table_8h_source.html  _advertiser_8h.html  _advertiser_8h_source.html  _advertiser___impl_minimal_mdns_8cpp.html  _advertiser___impl_none_8cpp.html  _android_ble_application_delegate_8cpp.html  _android_ble_application_delegate_8h.html  _android_ble_application_delegate_8h_source.html  _android_ble_connection_delegate_8cpp.html  _android_ble_connection_delegate_8h.html  _android_ble_connection_delegate_8h_source.html  _android_ble_platform_delegate_8cpp.html  _android_ble_platform_delegate_8h.html  _android_ble_platform_delegate_8h_source.html  _android_chip_stack_8java.html  _android_device_controller_wrapper_8cpp.html  _android_device_controller_wrapper_8h.html  _android_device_controller_wrapper_8h_source.html  _android_persistent_storage_delegate_8java.html  _async_d_n_s_resolver_sockets_8cpp.html  _async_d_n_s_resolver_sockets_8h.html  _async_d_n_s_resolver_sockets_8h_source.html  _b_l_e_8cpp.html  _b_l_e_end_point_8cpp.html  _b_l_e_end_point_8h.html  (+2802 more)
.github/workflows/: build.yaml  examples-esp32.yaml  examples-nrfconnect.yaml  examples-nxp.yaml  examples-realtek.yaml  nightly.yaml  restyled.yml  scorecard.yml  spell.yml  tests.yaml
config/common/cmake/: chip_gn_kconfig_defaults.cmake
config/esp32/components/chip/: CMakeLists.txt
config/nrfconnect/chip-module/: CMakeLists.txt
config/realtek/chip-module/: CMakeLists.txt
config/telink/chip-module/: CMakeLists.txt
docs/: requirements.txt
docs/guides/: index.md  wifi_srp_infrastructure_dnssd.md
examples/all-clusters-app/linux/include/: CHIPProjectAppConfig.h
examples/all-devices-app/posix/: main.cpp
examples/light-switch-app/ti/cc13x4_26x4/: args.gni
examples/lighting-app/efr32/: BUILD.gn
examples/lighting-app/efr32/include/: FreeRTOSConfig.h
examples/lighting-app/efr32/src/: main.cpp
examples/lighting-app/wf200/: BUILD.gn  README.md  args.gni  with_pw_rpc.gni
examples/lighting-app/wf200/include/: AppTask.h
examples/lighting-app/wf200/src/: AppTask.cpp  ButtonHandler.cpp  main.cpp
examples/lock-app/efr32/: BUILD.gn
examples/lock-app/silabs/: build_for_wifi_args.gni  openthread.gni
examples/lock-app/silabs/data_model/: BUILD.gn  lock-thread-app.matter  lock-thread-app.zap  lock-wifi-app.matter  lock-wifi-app.zap
examples/lock-app/wf200/: BUILD.gn  README.md  args.gni
examples/lock-app/wf200/include/: AppConfig.h  AppEvent.h  AppTask.h  BoltLockManager.h  ButtonHandler.h  CHIPProjectConfig.h  FreeRTOSConfig.h  demo_config.h
examples/lock-app/wf200/src/: AppTask.cpp  BoltLockManager.cpp  ButtonHandler.cpp  ZclCallbacks.cpp  main.cpp
examples/network-manager-app/linux/: BUILD.gn  main.cpp
examples/platform/efr32/: MemMonitoring.cpp  init_otSystem.c
examples/platform/efr32/lwip_host/: ethernetif.cpp  ethernetif.h
examples/platform/efr32/wfx-host/: sl_wfx_configuration.h  sl_wfx_host.c  sl_wfx_host.h  sl_wfx_host_crypto.c  sl_wfx_host_events.cpp  sl_wfx_host_events.h  sl_wfx_host_pinout.h  sl_wfx_host_spi.c  sl_wfx_securelink_task.c  sl_wfx_task.c  sl_wfx_task.h
examples/platform/linux/: AppMain.cpp  BUILD.gn
examples/platform/silabs/: BaseApplication.cpp  MatterConfig.cpp
src/access/tests/: TestAccessControl.cpp
src/app/clusters/groupcast/: GroupcastLogic.cpp  GroupcastLogic.h
src/app/server/: Server.cpp  Server.h
src/controller/python/: OpCredsBinding.cpp
src/credentials/: CHIPCert.h
src/include/platform/: CHIPDeviceConfig.h
src/lib/core/: CHIPConfig.h
src/lib/dnssd/: BUILD.gn  InfraDnssd.cpp  InfraDnssd.h  InfraDnssdServer.cpp  InfraDnssdServer.h  InfraDnssdServerImpl.cpp  InfraDnssdServerImpl.h  SrpDnsMessage.cpp  SrpDnsMessage.h  SrpKeyPair.cpp  SrpKeyPair.h  SrpUnicastResolver.cpp  SrpUnicastResolver.h  SrpUpdate.cpp  SrpUpdate.h  wifi_srp.gni
src/lib/dnssd/platform/: Dnssd.h  InfraDiscovery.h
src/lib/dnssd/tests/: BUILD.gn  TestInfraDnssd.cpp  TestSrpDnsMessage.cpp
src/lib/support/: TestGroupData.h
src/lwip/efr32/: lwipopts.h
src/platform/: BUILD.gn  TestIdentity.cpp  device.gni
src/platform/EFR32/: CHIPDevicePlatformConfig.h  CHIPDevicePlatformEvent.h  CHIPMem-Platform.cpp  ConfigurationManagerImpl.cpp  ConfigurationManagerImpl.h  ConnectivityManagerImpl.cpp  ConnectivityManagerImpl.h  DeviceNetworkProvisioningDelegateImpl.cpp  DeviceNetworkProvisioningDelegateImpl.h  EFR32Config.h  InetPlatformConfig.h  PlatformManagerImpl.cpp  PlatformManagerImpl.h  ServiceProvisioning.cpp  WFXUtils.cpp  WFXUtils.h  args.gni  efr32-chip-mbedtls-config.h  wifi_args.gni
src/platform/FreeRTOS/: GenericThreadStackManagerImpl_FreeRTOS.cpp
src/platform/Linux/: BUILD.gn  DnssdImpl.cpp  InfraDiscovery.cpp
src/platform/OpenThread/: GenericThreadStackManagerImpl_OpenThread.hpp  GenericThreadStackManagerImpl_OpenThread_LwIP.cpp
src/platform/silabs/: NetworkCommissioningWiFiDriver.cpp  NetworkCommissioningWiFiDriver.h
src/python_testing/: TC_CC_10_1.py  TC_DeviceBasicComposition.py  TC_GC_common.py  TC_G_2_2.py  TC_LVL_9_1.py  TC_MOD_2_3.py  TC_OO_2_7.py  TC_RR_1_1.py  TC_SC_5_1.py  TC_SC_5_2.py  TC_SRPS_1_1.py  TC_SRP_1_1.py  TC_SRP_2_1.py  TC_SRP_2_3.py
(+23 files in other folders)
