# Copyright (c) 2026 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")

declare_args() {
  # Enable the Wi-Fi/Ethernet SRP client: register DNS-SD services with an
  # infrastructure SRP server (RFC 9665) instead of relying solely on mDNS.
  chip_enable_wifi_srp_client = false

  # Enable the infrastructure SRP server, Advertising Proxy and Discovery Proxy
  # for Network Infrastructure Manager devices.
  chip_enable_wifi_srp_server = false
}

# True when either the client or the server is enabled. The DNS message codec
# and SRP key management are shared by both.
wifi_srp_enabled = chip_enable_wifi_srp_client || chip_enable_wifi_srp_server
